# DNS-Relay

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
data/: dnsrelay.txt  temp.cpp
include/: CacheConcept.h  Config.h  DNSCache.h  DNSDatabase.h  DNSQuery.h  DNSQuery.hpp  DNSResolver.h  DNS_query.h  DNS_utils.h  FileDatabase.h  IP_Result.h  IP_TYPE.h  LRUCache.h  LRU_Cache.h  LRU_Cache.hpp  LRU_KCache.h  LRU_K_Cache.h  LRU_K_Cache.hpp  SocketPool.h  ThreadPool.h  ThreadPool.hpp  UpStreamDNS.h  add.h  log_initialization.h  show_help.h  sub.h  thread_handle.h  thread_handle.hpp  utility.h
src/: Config.cpp  DNSCache.cpp  DNSDatabase.cpp  DNSQuery.cpp  DNSRecordManager.cpp  DNSRecordManager.h  DNSResolver.cpp  DNSResolver.h  DNS_query.cpp  DNS_utils.cpp  FileDatabase.cpp  HashTable.cpp  HashTable.h  IP_Result.cpp  NetworkService.cpp  NetworkService.h  SocketPool.cpp  UpStreamDNS.cpp  log_initialization.cpp  main.cpp  show_help.cpp  sub.cpp  test.cpp  utility.cpp
test/: stress_test.cpp  test.cpp
